starter routing and controllers, first model and db connection

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=5000
+MONGO_URI=mongodb+srv://simonpetrovic:4U3Cvv6MSpVIgLwB@cluster0.xskan.mongodb.net/ecommerce_db?retryWrites=true&w=majority&appName=Cluster0
